test/gpu/native/assertOnFailToGpuizeVar.promote.forall.good
assertOnFailToGpuizeVar.chpl:13: warning: GPU attributes on variable declarations are not currently applied to promoted expressions in the variables' initializers
assertOnFailToGpuizeVar.chpl:13: note: consider using the 'GpuDiagnostics' module to ensure that promoted expressions ran on GPU at runtime
$CHPL_HOME/modules/internal/ChapelArray.chpl:nnnn: error: Loop is marked with @assertOnGpu but is not eligible for execution on a GPU
assertOnFailToGpuizeVar.chpl:2: note: function is marked as not eligible for GPU execution
assertOnFailToGpuizeVar.chpl:2: note:   reached via standard library code
